--- a/gradle.properties
+++ b/gradle.properties
@@ -29,7 +29,7 @@ electronPackagerVersion=^15.1.0
 gradleMkdocsPluginVersion=2.3.0
 intellijPlatformVersion=213.6461.23
 intellijMarkdownPluginVersion=213.5744.223
-intellijJcefVersion=89.0.12-g2b76680-chromium-89.0.4389.90-api-1.6
+intellijJcefVersion=104.4.26-g4180781-chromium-104.0.5112.102-api-1.10
 istanbulInstrumenterLoaderVersion=3.0.1
 javassistVersion=3.28.0-GA
 javaWebSocketVersion=1.5.2
