update jcef version

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,9 +27,13 @@ dnsjavaVersion=3.4.3
 electronVersion=^16.0.6
 electronPackagerVersion=^15.1.0
 gradleMkdocsPluginVersion=2.3.0
+#intellijPlatformVersion=231.9392.1
+#intellijMarkdownPluginVersion=231.9392.1
 intellijPlatformVersion=213.6461.23
 intellijMarkdownPluginVersion=213.5744.223
-intellijJcefVersion=104.4.26-g4180781-chromium-104.0.5112.102-api-1.10
+# intellijJcefVersion=104.4.26-g4180781-chromium-104.0.5112.102-api-1.10
+#intellijJcefVersion=122.1.9-gd14e051-chromium-122.0.6261.94-api-1.17-251-b2
+intellijJcefVersion=98.3.34+g97a5ae6+chromium-98.0.4758.102-api-1.7
 # gradleMkdocsPluginVersion=2.2.0
 # intellijPlatformVersion=213.6777.52
 # intellijMarkdownPluginVersion=213.6777.52
